#=============================================================================
#  Mscore
#  Linux Music Score Editor
#  $Id:$
#
#  Copyright (C) 2002-2008 by Werner Schweer and others
#
#  This program is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License version 2.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#=============================================================================

install(FILES
      mscore_af.ts
      mscore_af.qm
      mscore_ar.ts
      mscore_ar.qm
      mscore_cs.ts
      mscore_cs.qm
      mscore_da.ts
      mscore_da.qm
      mscore_de.ts
      mscore_de.qm
      mscore_en_GB.ts
      mscore_en_GB.qm
      mscore_en_US.ts
      mscore_en_US.qm
      mscore_es.ts
      mscore_es.qm
      mscore_fi.ts
      mscore_fi.qm
      mscore_fr.ts
      mscore_fr.qm
      mscore_gl.ts
      mscore_gl.qm
      mscore_hi_IN.ts
      mscore_hi_IN.qm
      mscore_hu.ts
      mscore_hu.qm
      mscore_it.ts
      mscore_it.qm
      mscore_nl.ts
      mscore_nl.qm
      mscore_no.ts
      mscore_no.qm
      mscore_pl.ts
      mscore_pl.qm
      mscore_pt.ts
      mscore_pt.qm
      mscore_pt_BR.ts
      mscore_pt_BR.qm
      mscore_ru.ts
      mscore_ru.qm
      mscore_ro.ts
      mscore_ro.qm
      mscore_sv.ts
      mscore_sv.qm
      mscore_tr.ts
      mscore_tr.qm
      mscore_uk.ts
      mscore_uk.qm
      mscore_zh_TW.ts
      mscore_zh_TW.qm
      DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}locale
      )

